--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,7 @@ services:
         build: ./orders
         ports:
             - "8082:8082"
+    payments:
+        build: ./payments
+        ports:
+            - "8081:8081"
