--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 version: '3.9'
 services:
-  # orders:
-  #   build: ./orders
-  #   ports:
-  #     - '8082:8082'
-  # payments:
-  #   build: ./payments
-  #   ports:
-  #     - '8081:8081'
+  orders:
+    build: ./orders
+    ports:
+      - '8082:8082'
+  payments:
+    build: ./payments
+    ports:
+      - '8081:8081'
+  orchestrator:
+    build: ./orchestrator
+    ports:
+      - '8083:8083'
   cassandra:
     image: cassandra:3.11
     ports:
