--- a/payments/config/development.yaml
+++ b/payments/config/development.yaml
@@ -1,7 +1,3 @@
-# config for sample
 domain: 'samples-domain'
 service: 'cadence-frontend'
-host: '127.0.0.1:7933'
-# config for emitting metrics
-#prometheus:
-#  listenAddress: "127.0.0.1:9098"
+host: 'cadence:7933'
